monticore-generator/src/test/resources/cocos/invalid/A4008/A4008c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4008;

grammar A4008c extends mc.grammars.types.TestTypes {

  token ArrayType = "a";

}
